--- a/aFileChooser/src/main/res/values/strings.xml
+++ b/aFileChooser/src/main/res/values/strings.xml
@@ -19,5 +19,5 @@
     <string name="storage_removed">Storage was removed or unmounted.</string>
     <string name="choose_file">Select a file</string>
     <string name="error_selecting_file">Error selecting File</string>
-    <string name="internal_storage">Internal storage</string>
+    <string name="internal_storage" translatable="false">Internal storage</string>
 </resources>
